--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   background-color: #35654d;
   height: 100vh;
   width: 100vw;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .BlackJackTable {
