--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color: #35654d;
+  color: white;
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
@@ -10,13 +11,17 @@
   height: 100%;
   padding: 10px;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   flex-direction: column;
   box-sizing: border-box;
 }
 
 .Players {
   border-radius: 20px;
-  height: 250px;
-  min-width: 220px;
+  /* height: 250px; */
+  /* min-width: 220px; */
+}
+
+.mid-panel{
+  /* display: flex; */
 }
