--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@
   height: 100%;
   padding: 10px;
   display: flex;
-  /* justify-content: space-between; */
-  flex-direction: column;
+  justify-content: space-between;
+  flex-direction: row;
   box-sizing: border-box;
 }
 
