--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,30 @@
 
 .Players {
   border-radius: 20px;
-  /* height: 250px; */
-  /* min-width: 220px; */
 }
 
-.mid-panel{
-  /* display: flex; */
+.Overlay {
+    opacity: 1;
+    background-image: url("https://steamuserimages-a.akamaihd.net/ugc/1702907964261717226/AB9A223CF74E9E08D730872229577E2D4029E824/?imw=637&imh=358&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true");
+    background-color: #ccc;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    transition: opacity 0.2s ease-in; /* Standard syntax */
+    -webkit-transition: opacity 0.2s ease-in; /* WebKit prefix */
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+.Restart{
+  height: 100px;
+  background-color: #35654d;
+  color: #FFF;
+  font-size: 25px;
 }
