--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,20 @@
   padding: 5px;
 }
 
+.BetControlPanel {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.BetLabel{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2px 10px;
+  font-size: 20px;
+}
+
 .BettingButton{
   height: 50px;
 }
