--- a/src/App.css
+++ b/src/App.css
@@ -21,31 +21,31 @@
 }
 
 .Overlay {
-    opacity: .5;
-    background-color: #ccc;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    transition: opacity 0.2s ease-in;
-    -webkit-transition: opacity 0.2s ease-in;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
+  opacity: .5;
+  background-color: #ccc;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  transition: opacity 0.2s ease-in;
+  -webkit-transition: opacity 0.2s ease-in;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
 }
 
-.Restart{
+.Restart {
   height: 100px;
   background-color: #35654d;
   color: #FFF;
   font-size: 25px;
 }
 
-.BettingTips{
+.BettingTips {
   border: 1px solid #FFF;
   margin: 10px;
   padding: 5px;
@@ -57,7 +57,7 @@
   padding: 10px;
 }
 
-.BetLabel{
+.BetLabel {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -65,6 +65,18 @@
   font-size: 20px;
 }
 
-.BettingButton{
+.BettingButton {
   height: 50px;
+}
+
+.winner-container {
+  background: #FFF;
+  border-radius: 10px;
+  height: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 10px;
+  padding: 5px;
+  font-size: 25px;
 }
